tests/invalid/missing_main.rk
class foo {
    def sum(a, b) { return a + b; }
}